--- a/index.html
+++ b/index.html
@@ -5,11 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./index.js" defer></script>
 </head>
 
 <body>
-
+    <main>
+        <div class="selections-container">
+            <div class="selection-container">
+                <button href="#" class="selection-button">
+                    <img class="selection-img" src="./assets/images/stone.png" alt="a drawing of a Rock">
+                </button>
+                <h2>ROCK</h2>
+            </div>
+            <div class="selection-container">
+                <button href="#" class="selection-button">
+                    <img class="selection-img" src="./assets/images/paper.png" alt="a drawing of a piece of paper">
+                </button>
+                <h2>PAPER</h2>
+            </div>
+            <div class="selection-container">
+                <button href="#" class="selection-button">
+                    <img class="selection-img" src="./assets/images/scissors.png" alt="a drawing of a pair of scissors">
+                </button>
+                <h2>SCISSORS</h2>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
