Implemented button functionality

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <main>
         <div class="selections-container">
             <div class="selection-container">
-                <button href="#" class="selection-button">
+                <button class="selection-button" value="rock">
                     <img class="selection-img" src="./assets/images/stone.png" alt="a drawing of a Rock">
                 </button>
                 <h2>ROCK</h2>
             </div>
             <div class="selection-container">
-                <button href="#" class="selection-button">
+                <button class="selection-button" value="paper">
                     <img class="selection-img" src="./assets/images/paper.png" alt="a drawing of a piece of paper">
                 </button>
                 <h2>PAPER</h2>
             </div>
             <div class="selection-container">
-                <button href="#" class="selection-button">
+                <button class="selection-button" value="scissors">
                     <img class="selection-img" src="./assets/images/scissors.png" alt="a drawing of a pair of scissors">
                 </button>
                 <h2>SCISSORS</h2>
