--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 <body>
     <main>
+        <div class="scoreboards">
+            <div class="scoreboard">
+                <span>PLAYER SCORE</span>
+                <span class="player-score">0</span>
+            </div>
+            <div class="scoreboard">
+                <span>COMPUTER SCORE</span>
+                <span class="computer-score">0</span>
+            </div>
+        </div>
         <div class="selections-container">
             <div class="selection-container">
                 <button class="selection-button" value="rock">
