Completed basic game implementation with UI

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <span class="computer-score">0</span>
             </div>
         </div>
-        <div class="selections-container">
+        <div class="result">
+        </div>
+        <div class="start-game">
+            <button class="start-button">START GAME</button>
+        </div>
+        <div class="selections-container hidden">
             <div class="selection-container">
                 <button class="selection-button" value="rock">
                     <img class="selection-img" src="./assets/images/stone.png" alt="a drawing of a Rock">
@@ -41,6 +46,7 @@
                 <h2>SCISSORS</h2>
             </div>
         </div>
+        <div class="round-outcome"></div>
     </main>
 </body>
 
