--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <div class="scoreboards">
+        <div class="scoreboards-container hidden">
             <div class="scoreboard">
                 <span>PLAYER SCORE</span>
                 <span class="player-score">0</span>
@@ -21,15 +21,20 @@
                 <span class="computer-score">0</span>
             </div>
         </div>
-        <div class="result">
+        <div class="result-container hidden">
         </div>
-        <div class="start-game">
+        <div class="start-game-container">
             <button class="start-button">START GAME</button>
+        </div>
+        <div class="feedback-container hidden">
+            <img class="feedback-icon player-icon" src="" alt="">
+            <div class="round-outcome"></div>
+            <img class="feedback-icon computer-icon" src="" alt="">
         </div>
         <div class="selections-container hidden">
             <div class="selection-container">
                 <button class="selection-button" value="rock">
-                    <img class="selection-img" src="./assets/images/stone.png" alt="a drawing of a Rock">
+                    <img class="selection-img" src="./assets/images/rock.png" alt="a drawing of a Rock">
                 </button>
                 <h2>ROCK</h2>
             </div>
@@ -46,7 +51,7 @@
                 <h2>SCISSORS</h2>
             </div>
         </div>
-        <div class="round-outcome"></div>
+        <button class="reset-button hidden">RESET GAME</button>
     </main>
 </body>
 
